# PTaaS-Teams

./: .env.example  docker-compose.yml  pyproject.toml  requirements.txt  scripts_wait_for_db.py
business/: admin.py  models.py  permissions.py  serializers.py  views.py
business/migrations/: 0001_initial.py  0002_phase1_customer_project_reports.py  0003_projectmember_alter_asset_options_and_more.py  0004_finding_historyfinding_scanfile_remove_batch_extra_and_more.py  0005_alter_asset_id_alter_batch_id_alter_customer_id_and_more.py
common/: api_permissions.py  permission_mixins.py  permissions.py
config/: settings.py  urls.py  views.py
docs/: frontend_phase1_ant_design.md  phase1_backend_design.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: auth.js  client.js  platform.js
frontend/src/components/: LoginPage.jsx
frontend/src/pages/: AccountSecurityPage.jsx  DashboardPage.jsx  RoleManagementPage.jsx  UserManagementPage.jsx  UserRoleBindingPage.jsx
frontend/src/styles/: app.css
static/css/: console.css
static/js/: console.js
templates/: console.html
tests/: test_api.py
users/: admin.py  apps.py  auth_serializers.py  auth_views.py  models.py  permissions.py  serializers.py  views.py
users/management/commands/: seed_initial_data.py
users/migrations/: 0001_initial.py  0002_userrole_scope_fk.py  0003_user_token_version.py
